# mzimeja

./: .gitignore  CMakeLists.txt  HISTORY.txt  HowToBuild.txt  LICENSE.txt  Makefile.msys  README.txt  READMEJP.txt  SmallWString.hpp  WStringRef.hpp  cand_info.cpp  cand_info.h  cmncopy.inc  cmnsrc.inc  comp_str.cpp  comp_str.h  config.c  config.cpp  convert.cpp  data.cpp  dic.c  dic.cpp  dic.txt  dic2.c  dic2.cpp  dict.hpp  dict_compile.cpp  dict_compile.rc  dirs  fakeime.cc  fakeime.cpp  fakeime.dlg  fakeime.h  fakeime.htm  fakeimeu.def  fakeimeu.rc  fdebug.cc  fdebug.cpp  footmark.hpp  imepad.cpp  (+59 more)
a/: fakeime.def  fakeime.inf  fakeime.rc  fakeime.rcv  makefile.inc  sources
dict_compile/: CMakeLists.txt  dict_compile.cpp  dict_compile_res.rc
doc/: IME-API.txt  Tagengo-IME-API.doc  Tagengo-IME-API.txt  ime-api_ja.doc  ime-overview_ja.doc  mzimeja-spec.txt  mzimeja-spec_ja.txt  translation-en2ja.txt
doc/ja/: IME-Gaiyou.txt  Yougo.txt
doc/rei_s_booth/: 16to32.html  SnagCon1.htm  howto1.html  howto2.html  howto3.html  howto4.html  howto5.html  howto6.html  howto7.html  imedic.html  imm0.html  imm1.html  imm10.html  imm11.html  imm2.html  imm3.html  imm4.html  imm5.html  imm6.html  imm7.html  imm8.html  imm9.html  index.html  index__1.html  index__2.html
enc_temp_folder/cb1b908f67e7642ae8ea75958f5c224/: main.cpp
ime/: CMakeLists.txt  cand_info.cpp  comp_str.cpp  config.cpp  convert.cpp  debug.cpp  footmark.hpp  imm.cpp  immdev.h  immsec.cpp  input.cpp  input.h  keychar.cpp  main.cpp  mzimeja.def  mzimeja.h  mzimeja_res.rc  postal.cpp  process.cpp  regword.cpp  resource.h  tests.cpp  ui.cpp  uicand.cpp  uicomp.cpp  uiguide.cpp  uistate.cpp
ime/unboost/: conversion.hpp  exception.hpp  shared_ptr.hpp  smart_ptr.hpp  unboost.h
ime_setup/: CMakeLists.txt  ime_setup.cpp  ime_setup_res.rc  resource.h
ime_setup/lang/: en_US.rc
imepad/: CMakeLists.txt  imepad.cpp  imepad_res.rc  resource.h
include/: footmark.hpp  immdev.h  immsec.h  indicml.h  input.h  mzimeja.h  unboost.hpp  vksub.h
m/: fakeimem.def  fakeimem.inf  fakeimem.rc  sources
mzimeja/: CMakeLists.txt  cand_info.cpp  convert.cpp  keychar.cpp  mzimeja_res.rc  uistate.cpp
projects/: dict_compile.vcproj  imepad.vcproj  mzimeja.sln  mzimeja.vcproj  setup.vcproj  verinfo.vcproj
res/: mzimeja.dic  name.dic  testdata.dic
setup/: CMakeLists.txt  setup.cpp  setup_res.rc
test/: comp_str_viewer.cpp  disabled_window.cpp  file_mapping_test.cpp  icontext_check.cpp  katsuyou.cpp  lcmap.cpp  make_radical_image.cpp  vkeycheck.c
test/imepad/: imepad.cpp  imepad.rc
u/: fakeimeu.inf  fakeimeu.rc  fakeimeu.rcv  sources
verinfo/: CMakeLists.txt  verinfo.cpp  verinfo_res.rc
